--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg": "^7.14.0",
     "react": "^16.12.0",
     "react-chartist": "^0.14.2",
+    "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
